--- a/server/index.html
+++ b/server/index.html
@@ -177,9 +177,13 @@
             </div>
 
         </div>
+        <footer class="w3-container w3-teal">
+            <p>&copy; 2022, Mattia Mascarello, Lorezo Dellapiana, Luca Savio Biello</p>
+        </footer>
         <script src="assets/gauges.js"></script>
         <script src="assets/tabUi.js"></script>
         <script src="assets/tableGraphs.js"></script>
+        <script src="assets/egg.js"></script>
 </body>
 
 </html>
