Lorenzo fixed name

--- a/server/index.html
+++ b/server/index.html
@@ -178,7 +178,7 @@
 
         </div>
         <footer class="w3-container w3-teal">
-            <p>&copy; 2022, Mattia Mascarello, Lorezo Dellapiana, Luca Savio Biello</p>
+            <p>&copy; 2022, Mattia Mascarello, Lorenzo Dellapiana, Luca Savio Biello</p>
         </footer>
         <script src="assets/gauges.js"></script>
         <script src="assets/tabUi.js"></script>
